--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 //	implementation 'org.webjars:popper.js:2.11.7'
 	implementation 'org.webjars:webjars-locator:0.48'
 	implementation 'org.webjars.npm:htmx.org:1.9.8'
+	implementation 'com.google.guava:guava:32.1.3-jre'
 
 
 //	implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
